petstore/petstore-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: petstore
spec:
  host: petstore.default.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 1s
      maxEjectionPercent: 50
      baseEjectionTime: 30s
